<!--
  ~ Copyright (c) 2018, Deepak Goyal under Apache License.
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ - Redistributions of source code must retain the above copyright
  ~   notice, this list of conditions and the following disclaimer.
  ~
  ~ - Redistributions in binary form must reproduce the above copyright
  ~   notice, this list of conditions and the following disclaimer in the
  ~   documentation and/or other materials provided with the distribution.
  -->

<resources>
    <string name="app_name">FBA Calculator</string>

    <string name="selectCategory">Select Category</string>
    <string name="revenue">Revenue</string>
    <string name="itemPrice">Item price</string>
    <string name="shipping">Shipping</string>
    <string name="dimensions">Product Dimensions</string>
    <string name="fbaFeeDetails">FBA Fee Details</string>

    <string name="length">Length (inches)</string>
    <string name="width">Width (inches)</string>
    <string name="height">Height (inches)</string>
    <string name="weight">Weight (lbs.)</string>
    <string name="isApparel">Is Apparel</string>
    <string name="calculate">Calculate</string>

    <!-- Validations -->
    <string name="emptyCategory">Please select the valid category</string>
    <string name="invalidItemPrice">Please enter valid item price</string>
    <string name="invalidShippingPrice">Please enter valid shipping price</string>
    <string name="invalidLength">Please enter valid length</string>
    <string name="invalidWidth">Please enter valid width</string>
    <string name="invalidHeight">Please enter valid height</string>
    <string name="invalidWeight">Please enter valid weight</string>

    <!-- Menu -->
    <string name="menuInfo">Info</string>

    <string name="info"><![CDATA[<html>
<body>
<h4>FBA Calculator</h4>
<p><b>1. What is <b>FBA</b> and <b>FBA calculator</b>?</b></p>
<p>Full form of <b>FBA</b> is <b>Fulfilled by Amazon</b>. With Fulfillment by Amazon (FBA), you
    store your products in Amazon\'s fulfillment centers, and they pick, pack, ship, and provide
    customer service for your products. Best of all, FBA can help you scale your business and reach
    more customers.
    <br />
    <b>FBA calculator</b> is used calculate how much fees you have to pay Amazon for FBA Purpose.
</p>

<p><b>2. Revenue, Item Price, and shipping</b></p>
<p><b>Item Price</b> is the Price charged to the customer.
    <br />
    <b>Shipping</b> is the Price charged to the customer for shipping. For seller-fulfilled orders,
    the seller collects this amount as revenue. For FBA orders, shipping amount is zero as this is
    already included in <b>Item Price</b>.
    <br />
    <b>Revenue</b> is the sum of Total Price and Shipping Price.
</p>

<p><b>3. Size Tier, Product Dimensions, Fulfillment Fee, and Monthly Storage Fee</b></p>
<p><b>Size Tier</b> tells in which category the Item falls. Either it is <b>Standard-Size</b> or <b>Oversize</b>.
    Size Tier is computed based on the product dimensions (Length, Width, Height, and Weight).
    <br />
    Based on the Size Tier <b>Fulfillment</b> fee and <b>Monthly Storage</b> fee is calculated.
    <br /><br />
    For more information you can visit the below link<br />
    https://services.amazon.com/fulfillment-by-amazon/pricing.html
</p>

<p><b>4. Amazon Referral Fee and Variable Closing Fee</b></p>
<p>
    <b>Amazon Referral Fee:</b>
    <br />
    Sellers pay a referral fee on each unit sold. This fee depends on the category the product
    belongs
    to and is calculated using a percentage of each unit\'s total price. Products in certain
    categories
    have a per-item minimum referral fee.
    <br />
    <b>Variable Closing Fee</b> is charged for each Media item that is sold. All sellers pay a
    Variable
    Closing Fee.
    <br /><br />
    For more information you can visit the below link<br />
    https://sellercentral.amazon.com/gp/help/external/200336920?language=en_US
</p>

<p>
    <i>Source of information: <b>Amazon.com</b></i>
</p>
</body>
</html>]]></string>
</resources>
