<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018, Deepak Goyal under Apache License.
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ - Redistributions of source code must retain the above copyright
  ~   notice, this list of conditions and the following disclaimer.
  ~
  ~ - Redistributions in binary form must reproduce the above copyright
  ~   notice, this list of conditions and the following disclaimer in the
  ~   documentation and/or other materials provided with the distribution.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fbacalculator.MainActivityViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/selectCategory"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selectCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:drawableEnd="@drawable/arrow_down"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/arrow_down"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@={viewModel.category}"
                        android:textColor="#000"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/revenue"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.fbacalculator.views.PriceEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/itemPrice"
                        android:text="@={viewModel.itemPrice}" />

                    <com.fbacalculator.views.PriceEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/shipping"
                        android:text="@={viewModel.shipping}"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/dimensions"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.fbacalculator.views.DimensionEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/length"
                        android:text="@={viewModel.length}" />

                    <com.fbacalculator.views.DimensionEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/width"
                        android:text="@={viewModel.width}" />

                    <com.fbacalculator.views.DimensionEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/height"
                        android:text="@={viewModel.height}" />

                    <com.fbacalculator.views.DimensionEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight"
                        android:text="@={viewModel.weight}" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#fff"
                app:contentPadding="10dp">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="@={viewModel.isApparel}"
                    android:gravity="center_vertical"
                    android:text="@string/isApparel" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#fff">

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.calculate()}"
                    android:text="@string/calculate" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>